# zedra

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cmake-single-platform.yml  deploy-docs.yml  python-publisher.yml
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: api-reference.md  architecture.md  cli.md  docker.md  getting-started.md  intro.md  ros2-integration.md
docs/docs/core-concepts/: determinism.md  events.md  reducer.md  world-state.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
examples/: CMakeLists.txt  main.cpp
scripts/: docker_test.sh  run_tests.sh
scripts/migrations/: 001_init.sql
zedra_cli/: CMakeLists.txt
zedra_cli/src/: binary_log.cpp  binary_log.hpp  cli_options.cpp  cli_options.hpp  main.cpp  write_fixture.cpp
zedra_core/: CMakeLists.txt  package.xml
zedra_core/include/zedra/: egress_item.hpp  event.hpp  lock_free_queue.hpp  reducer.hpp  state.hpp
zedra_core/src/: lock_free_queue.cpp  reducer.cpp  state.cpp
zedra_core/tests/: CMakeLists.txt  behavioral_guarantees.cpp  chaotic_ingestion_test.cpp  concurrent_test.cpp  example_smoke_test.cpp  main.cpp  replay_test.cpp  sliding_window_test.cpp  unit_event.cpp  unit_lock_free_queue.cpp  unit_state.cpp
zedra_publisher/: README.md  pyproject.toml
zedra_publisher/tests/: test_event.py
zedra_publisher/zedra_publisher/: __init__.py  event.py  publisher.py
zedra_ros/: CMakeLists.txt  package.xml
zedra_ros/include/zedra_ros/: zedra_bridge_node.hpp
zedra_ros/msg/: SnapshotMeta.msg  ZedraEvent.msg
zedra_ros/src/: node.cpp  zedra_bridge_node.cpp
zedra_ros/test/: test_replay_determinism.py
